force-app/main/default/objects/Questionnaire_Question_Bank__c/Questionnaire_Question_Bank__c.object-meta.xml
<CustomObject>
    <label>Questionnaire Question Bank</label>
    <nameField>
        <displayFormat>QQB-{YYYY}{MM}-{0000}</displayFormat>
        <label>Questionnaire Question Bank Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire Question Banks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>