force-app/main/default/objects/Questionnaire_Question_Bank__c/fields/Examination__c.field-meta.xml
<CustomField>
    <fullName>Examination__c</fullName>
    <label>Examination</label>
    <referenceTo>Examination__c</referenceTo>
    <relationshipLabel>Questionnaire Question Banks</relationshipLabel>
    <relationshipName>Questionnaire_Question_Banks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>