force-app/main/default/objects/Questionnaire_Question_Bank__c/fields/Question_Bank__c.field-meta.xml
<CustomField>
    <fullName>Question_Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Bank</label>
    <referenceTo>Question_Bank__c</referenceTo>
    <relationshipLabel>Question Banks</relationshipLabel>
    <relationshipName>Question_Bank</relationshipName>
    <type>Lookup</type>
</CustomField>