force-app/main/default/objects/Questionnaire_Question_Bank__c/fields/Question_Bank_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Bank_Type__c</fullName>
    <formula>Question_Bank__r.RecordType.Name</formula>
    <label>Question Bank Type</label>
    <type>Text</type>
</CustomField>