force-app/main/default/objects/Questionnaire_Question_Bank__c/fields/Question_Bank_Type_API__c.field-meta.xml
<CustomField>
    <fullName>Question_Bank_Type_API__c</fullName>
    <formula>Question_Bank__r.RecordType.DeveloperName</formula>
    <label>Question Bank Type API</label>
    <type>Text</type>
</CustomField>