force-app/main/default/objects/Questionnaire_Question_Bank__c/fields/Training_Task__c.field-meta.xml
<CustomField>
    <fullName>Training_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Task</label>
    <referenceTo>Training_Task__c</referenceTo>
    <relationshipLabel>Questionnaire Question Banks</relationshipLabel>
    <relationshipName>Questionnaire_Question_Banks</relationshipName>
    <type>Lookup</type>
</CustomField>